# Vessel

./: .gitignore  ANCHOR_SPEC.md  CHANGELOG.md  HARBORLINES_SPEC.md  LICENSE  PHASE_2.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  crypto.rs  db.rs  lib.rs  main.rs
src/components/: AshCanvas.tsx  AtmosphereControls.tsx  Editor.tsx  HelpOverlay.tsx  ModeIndicator.tsx  ShortcutHint.tsx  SupportOverlay.tsx  TransientNotice.tsx  Vault.tsx  VaultGate.tsx  VaultSession.tsx
src/extensions/: transientBlock.ts
src/hooks/: useAdaptiveWeight.ts  useAshCommand.ts  useCadence.ts  useSessionTracking.ts  useTransientMode.ts  useVibeShift.ts
src/lib/: ashParticles.ts  cadence.test.ts  cadence.ts  ipc.ts
src/stores/: editorStore.ts  sessionStore.ts  transientStore.ts  vaultStore.ts  vibeStore.test.ts  vibeStore.ts
