[package]
name = "vessel"
version = "0.2.0"
description = "The Breathing Canvas"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vessel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
aes-gcm = "0.10"
keyring = { version = "3", features = ["apple-native"] }
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
